이미지 수정

--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
             <div class="owl-carousel owl-theme">
               <div class="item">
                 <div style="width: 100%; height: 0px">
-                  <img src="./assets/img/file6.jpg" alt="">
+                  <img src="./assets/img/file6.png" alt="">
                 </div>
                 <div class="fonsiz-sm fonwei-kr-sm letsp-sm color-basic-opac mt-3"></div>
               </div>
