이력서 수정

--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
                     <th>프로젝트</th>
                     <th>소개</th>
                     <th>개발 참여도</th>
-                    <th>추가 정보</th>
+					<th>Github 링크</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <th class="table-title" scope="col">홈페이지</th>
+                    <th class="table-title" scope="col">채식빌런</th>
                     <td>
-                      <div>[회사명] + 서비스명 + 서비스의 간략한 개요</div>
+                      <div>채식주의자 커뮤니티</div>
                       <div>
                         #Spring MVC #Mail Authentication
                       </div>
@@ -108,7 +108,7 @@
                       </div>
                     </td>
                     <td class="text-center">
-                      <div class="">( ~ M/M)</div>
+                      <div class="">(1인 개발)</div>
                       <div class="progress">
                        <div class="progress-bar progress-bar-striped bg-info" style="width: 100%">
                           <span class="progress-desc">100%</span>
@@ -116,35 +116,12 @@
                       </div>
                       <div class="progress-desc">단독 개발</div>
                     </td>
-                    <td class="text-center">
-                      <span class="text-muted" data-bs-toggle="modal" data-bs-target="#Modal1">
-                        <i class="bi bi-file-earmark-slides"></i>
-                        <div class="modal fade" id="Modal1" tabindex="-1" aria-labelledby="Modal1Label" aria-hidden="true">
-                          <div class="modal-dialog">
-                            <div class="modal-content">
-                              <div class="modal-header">
-                                <h5 class="modal-title" id="Modal1Label">개발 프로젝트 증빙 자료</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                              </div>
-                              <div class="modal-body">
-                                <img src="assets/svg/your-project.svg" alt="">
-                                <p class="modal-desc">
-                                  여기에 개발한 프로젝트에 대한 상세한 내용(서비스 개요, 사용 프로그램 언어, 사용 라이브러리, 개발 기여도, 개발 기간, 외부 링크 등을 입력해 주세요. 
-                                </p>
-                              </div>
-                              <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </span>
-                    </td>
+					<td class="text-center"><a href="https://github.com/jaeeeun93/homepage">https://github.com/jaeeeun93/homepage</a></td>
                   </tr>
                   <tr>
-                    <th class="table-title" scope="col">쇼핑몰</th>
+                    <th class="table-title" scope="col">CAMPTEM</th>
                     <td>
-                      <div>[회사명] + 서비스명 + 서비스의 간략한 개요</div>
+                      <div>캠핑 쇼핑몰 + 중고거래</div>
                       <div>
                         #MVC2 #KakaoPay
                       </div>
@@ -156,7 +133,7 @@
                       </div>
                     </td>
                     <td class="text-center">
-					  <div class="">( ~ M/M)</div>
+					  <div class="">(3인 개발)</div>
                       <div class="progress">
                         <div class="progress-bar progress-bar-striped bg-info" style="width: 100%">
                           <span class="progress-desc">100%</span>
@@ -164,30 +141,7 @@
                       </div>
                       <div class="progress-desc">프론트엔드, 백엔드 개발</div>
                     </td>
-                    <td class="text-center">
-                      <span class="text-muted" data-bs-toggle="modal" data-bs-target="#Modal1">
-                        <i class="bi bi-file-earmark-slides"></i>
-                        <div class="modal fade" id="Modal1" tabindex="-1" aria-labelledby="Modal1Label" aria-hidden="true">
-                          <div class="modal-dialog">
-                            <div class="modal-content">
-                              <div class="modal-header">
-                                <h5 class="modal-title" id="Modal1Label">개발 프로젝트 증빙 자료</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                              </div>
-                              <div class="modal-body">
-                                <img src="assets/svg/your-project.svg" alt="">
-                                <p class="modal-desc">
-                                  여기에 개발한 프로젝트에 대한 상세한 내용(서비스 개요, 사용 프로그램 언어, 사용 라이브러리, 개발 기여도, 개발 기간, 외부 링크 등을 입력해 주세요. 
-                                </p>
-                              </div>
-                              <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </span>
-                    </td>
+					<td class="text-center"><a href="https://github.com/jaeeeun93/shoppingmall_new">https://github.com/jaeeeun93/shoppingmall_new</a></td>
                   </tr>
                   
                 </tbody>
@@ -368,7 +322,7 @@
                     <th scope="col" class="table-title letsp-md">MySQL</th>
                     <td>
                       <a href="https://ko.wikipedia.org/wiki/MySQL target="_blank">
-                        <img src="https://ww.namu.la/s/d59b18ca16c075c57c5ebe902e14d46c58e2df1d638605017382993a696c0c8c2313077356a2bd90892fa9e00c704b6832c07c8981482d4d3b88ccb2848da731270d717f3f39ee7624aa9724a16d55992d09881aa947f20e8a66294ed0ab42b8" alt="MySQL Logo" />
+                        <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fm9bLX%2Fbtqx3TamF9P%2FRW8DUIknKEMDUGkcfdgYsk%2Fimg.png" alt="MySQL Logo" />
                       </a>
                     </td>
                     <td>
@@ -473,16 +427,6 @@
             </div>
           </a>
         </div>
-		<div class="col-md-6 col-lg-4 col-xl-2 mt-4">
-          <a href="http://kimjaeun.cafe24.com" class="card text-decoration-none">
-            <div class="card-header">
-              <span>kimjaeun.cafe24.com</span>
-            </div>
-            <div class="card-body fw-light small">
-              개인 사이트입니다, 제가 진행하는 프로젝트들을 업데이트하고 있습니다
-            </div>
-          </a>
-        </div>
       </div>
     </div>
 	</section>
@@ -532,9 +476,9 @@
           <div class="col-lg-7 mx-auto text-center mb-5">
             <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Document</h2>
             <p class=" fonsiz-sm color-basic fonsiz-xl fonwei-kr-xs lh-md letsp-xs ws-sm my-4">
-              가장 중요한 자산은 태도라고 생각합니다. <span class="fonwei-kr-md">문제</span>를 대하는 태도, <span class="fonwei-kr-md">개발</span>을 대하는 태도,
-              <span class="fonwei-kr-md">팀원</span>을 대하는 태도가 <span class="fonwei-kr-md">오랜 시간</span>과 결합하면 엄청난 능력이 된다고 믿습니다. 
-              그동안 노력해온 문서를 아래에서 보실 수 있습니다. 
+              가장 중요한 자산은 방식이라고 생각합니다. <span class="fonwei-kr-md">문제</span>를 대하는 방식, <span class="fonwei-kr-md">개발</span>을 대하는 방식,
+              <span class="fonwei-kr-md">팀원</span>을 대하는 방식이 <span class="fonwei-kr-md">시간</span>이 지나면 뛰어난 <span class="fonwei-kr-md">능력</span>이 된다고 믿습니다. 
+              그동안 만들어온 문서를 아래에서 보실 수 있습니다. 
             </p>
           </div>
         </div>
@@ -545,19 +489,19 @@
             <div class="owl-carousel owl-theme">
               <div class="item">
                 <div style="width: 100%; height: 0px">
-                  <img src="./assets/img/file6.png" alt="">
+                  <a href="https://github.com/jaeeeun93"><img src="./assets/img/file6.png" alt=""></a>
                 </div>
                 <div class="fonsiz-sm fonwei-kr-sm letsp-sm color-basic-opac mt-3"></div>
               </div>
               <div class="item">
                 <div style="width: 100%; height: 0px">
-                  <img src="" alt="">
+                  <a href="https://github.com/jaeeeun93/homepage"><img src="./assets/img/file7.png" alt=""></a>
                 </div>
                 <div class="fonsiz-sm fonwei-kr-sm letsp-sm color-basic-opac mt-3"><span class="letsp-md">2020-2021</span> 홈페이지<span class="letsp-md">.pdf</span></div>
               </div>
               <div class="item">
                 <div style="width: 100%; height: 395px">
-                  <img src="" alt="">
+                  <a href="https://github.com/jaeeeun93/shoppingmall_new"><img src="./assets/img/file8.png" alt=""></a>
                 </div>
                 <div class="fonsiz-sm fonwei-kr-sm letsp-sm color-basic-opac mt-3"><span class="letsp-md">2020</span> 쇼핑몰<span class="letsp-md">.pdf</span></div>
               </div>
