--- a/index.html
+++ b/index.html
@@ -528,9 +528,8 @@
               <div class="card-body">
                 <div class="price-title">
                   <h2 class="fonsiz-xxxl fonwei-en-xxl">
-                    <span class="fonsiz-xl color-basic-opac">₩</span>
-                    ±27M
-                    <span class="fonsiz-xl color-basic-opac">/Day</span>
+                   <span class="fonsiz-xl color-basic-opac">₩</span>
+                    회사 내규에 따름
                   </h2>
                 </div>
                 <hr>
@@ -557,8 +556,7 @@
                 <div class="price-title">
                   <h2 class="fonsiz-xxxl fonwei-en-xxl">
                     <span class="fonsiz-xl color-basic-opac">₩</span>
-                    ±417M
-                    <span class="fonsiz-xl color-basic-opac">/Mo</span>
+                    회사 내규에 따름
                   </h2>
                 </div>
                 <hr>
@@ -586,8 +584,7 @@
                 <div class="price-title">
                   <h2 class="fonsiz-xxxl fonwei-en-xxl">
                     <span class="fonsiz-xl color-basic-opac">₩</span>
-                    ±541M
-                    <span class="fonsiz-xl color-basic-opac">/Mo</span>
+                    회사 내규에 따름
                   </h2>
                 </div>
                 <hr>
