--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Header 시작 -->
     <header>
       <div class="container">
-        <h1>개발자 <strong>김재운</strong> 입니다</h1>
+        <h1>더블유엣더블유 백엔드 신입 개발자 <strong>김재운</strong> 입니다</h1>
       </div>
     </header>
     <!-- Header 끝 -->
@@ -66,7 +66,8 @@
             <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Summary</h2>
             <p class="color-basic fonsiz-xl fonwei-kr-xs letsp-xs ws-sm mt-4">
               안녕하세요. <span class="fonwei-en-xl letsp-md">김재운</span>입니다.
-              저는 올해 29살이며,<br>상상하는 것을 만들 수 있다는 것에 매력을 느끼고 <span class="fonwei-en-xl letsp-md">Coding</span>에 빠져 <span class="fonwei-en-xl letsp-md">개발자</span>를 꿈꾸고 있습니다.          
+              저는 올해 29살이며,<br>상상하는 것을 만들 수 있다는 것에 매력을 느끼고 <span class="fonwei-en-xl letsp-md">Coding</span>에 빠져 <span class="fonwei-en-xl letsp-md">개발자</span>가 되었습니다.<br>
+			  신입 개발자인만큼 공부하고 노력해서 1인분하는 개발자가 되는것이 목표입니다.
             </p>
           </div>
         </div>
@@ -443,7 +444,7 @@
               <div class="card-body p-4">
                 <h5 class="card-title fonsiz-xxl fonwei-kr-xl letsp-sm">빅데이터 기반 선체생산관리 IT융합시스템</h5>
                 <p class="card-text fonsiz-sm fonwei-kr-sm color-basic-opac letsp-sm">
-                  2020-09-15 - 2021-03-19 수료예정
+                  2020-09-15 - 2021-03-19 수료
                 </p>
               </div>
             </div>
@@ -464,6 +465,25 @@
                 <h5 class="card-title fonsiz-xxl fonwei-kr-xl letsp-sm">남목고등학교 이과 </h5>
                 <p class="card-text fonsiz-sm fonwei-kr-sm color-basic-opac letsp-sm">
                   2008 - 2011 졸업
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+	  <section class="container pt mt" id="education">
+        <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">CAREER</h2>
+        <div class="section-desc fonsiz-sm color-basic-opac letsp-sm ws-xs mt-2 mb-4">
+          Back-end
+        </div>
+        <div class="row">
+		  <div class="col-sm-12 col-lg-4">
+            <div class="card mb-3">
+              <div class="card-body p-4">
+                <h5 class="card-title fonsiz-xxl fonwei-kr-xl letsp-sm">더블유엣더블유</h5>
+                <p class="card-text fonsiz-sm fonwei-kr-sm color-basic-opac letsp-sm">
+                  2021-03 - ING
                 </p>
               </div>
             </div>
